--- a/MeshEditor/mesheditcontroller.ui
+++ b/MeshEditor/mesheditcontroller.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QToolBox" name="toolBox">
      <property name="currentIndex">
-      <number>1</number>
+      <number>4</number>
      </property>
      <property name="tabSpacing">
       <number>6</number>
@@ -748,7 +748,7 @@
       <attribute name="label">
        <string>Chord操作</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
+      <layout class="QVBoxLayout" name="verticalLayout_14">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -756,16 +756,102 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QPushButton" name="pushButton_Select_Edges_For_CO">
+        <widget class="QGroupBox" name="groupBox_4">
+         <property name="title">
+          <string>选择Chord</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_4">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>鼠标选择：</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_12">
+            <item>
+             <widget class="QPushButton" name="pushButton_Select_Edges_For_CO">
+              <property name="maximumSize">
+               <size>
+                <width>60</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>选择边</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="pushButton_Select_Edges_OK_For_CO">
+              <property name="maximumSize">
+               <size>
+                <width>60</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>选择结束</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <widget class="Line" name="line_4">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>索引选择：</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_11">
+            <item>
+             <widget class="QLineEdit" name="le_Chord_Idx_For_Co"/>
+            </item>
+            <item>
+             <widget class="QPushButton" name="pb_Select_Chord_By_Idx_For_CO">
+              <property name="maximumSize">
+               <size>
+                <width>50</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>确定</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pb_Show_Chord_Info_For_CO">
          <property name="text">
-          <string>选择Chord边</string>
+          <string>显示chord信息</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_Select_Edges_OK_For_CO">
+        <widget class="QPushButton" name="pb_Clear_Selection_For_CO">
          <property name="text">
-          <string>选择结束</string>
+          <string>清除选择</string>
          </property>
         </widget>
        </item>
